--- a/chat_domain.yml
+++ b/chat_domain.yml
@@ -1,29 +1,3 @@
-# intents:
-#     - order_pizza
-#     - greet
-
-# entities:
-#     - size
-#     - toppings
-# slots:
-#     size:
-#          type: text
-#     toppings:
-#         type: text
-
-# templates:
-#     utter_greet:
-#         - 'Hello, how can I help you?'
-#         - 'Hi, I am here to help.'
-#     utter_get_pizza_size:
-#         - 'What pizza size?'
-#     utter_get_pizza_toppings:
-#         - 'What toppings would you like on your pizza?'
-# actions:
-#     - utter_greet
-#     - utter_get_pizza_size
-#     - utter_get_pizza_toppings
-#     - action.ActionOrderPizza
 slots:
   product:
     type: text
@@ -45,6 +19,8 @@ intents:
     - question
     - thankyou
     - request_info
+    - inform
+    - goodbye
 
 templates:
   utter_greet:
@@ -52,6 +28,12 @@ templates:
   utter_goodbye:
     - "goodbye :("
     - "Bye-bye"
+  utter_thanks:
+    - "Thanks"
+    - "Thank you"
+    - "Perfect!"
+    - "YOLO!"
+
   utter_default:
     - "default message"
   utter_ack_dosearch: 
@@ -62,6 +44,8 @@ templates:
     - text: "did that help?"
       buttons:
         - title: "yes"
+          payload: "yes"
+        - title: "no"
           payload: "no"
   utter_ask_product: 
     - "which product you are using?"
@@ -70,24 +54,30 @@ templates:
   utter_ask_version:
     - "version?"
   utter_ask_details:
-    - "Can you please give details about the problem?"
-  # utter_ask_moreupdates: 
-  #   - "if you'd like to modify anything else, please tell me what"
-  # utter_ask_numpeople:
-  #   - "for how many people?"
-  # utter_ask_price: 
-  #   - text: "in which price range?"
-  #     buttons:
-  #     - title: "cheap"
-  #       payload: "cheap"
-  #     - title: "expensive"
-  #       payload: "expensive"
+    - "Can you please give details about the what you're looking for?"
+  utter_inform:
+    -"6.3"
+    -"6.4"
+    -"6.5"
+    -"6.6"
+    -"6.7"
+    -"7.0"
+    -"APA"
+    -"RTS"
+    -"Advance Process Automation"
+    -"Real-Time Soltuions"
+    -"Real-Time Solutions"
+    -"Real Time Solutions"
+    -"real time solutions"
+    -"real time solution"
+    -"real-time solution"
   utter_on_it: 
     - "I'm on it"
 
 actions:
 - utter_greet
 - utter_goodbye
+- utter_thanks
 - utter_default
 - utter_ack_dosearch
 - utter_ack_findalternatives
